# beets-store

./: .biome.json  .dockerignore  .eslintrc  .yamllint  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.env  docker-compose.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: docker-release.yml
beetsplug/: __init__.py
beetsplug/store/: __init__.py  app.py  dispatcher.py  lastfm.py  log.py  tasks.py  utils.py  worker.py
beetsplug/store/static/css/: store.album.css  store.artists.css  store.artists.dark.css  store.css  store.dark.css
beetsplug/store/static/js/: store.album.js  store.htmx.js  store.js  store.player.js
beetsplug/store/templates/: album.html  albums.html  artists.html  base.html  http_error.html  tracks.html
rootfs/opt/beets/: entrypoint
rootfs/opt/beets/config/: beets.yml
