[project]
name = "beets-store"
version = "0.0.1"
description = "A plugin for the music geek's media organizer Beets"
readme = "README.md"
authors = [
    {name = "Tobias Schäfer", email = "beets-store@blackox.org"},
]
dependencies = [
    "Flask >= 0.10.1",
    "beets >= 1.3.10",
    "redis >= 4.1.4",
    "requests >= 2.25.0",
    "rq >= 1.10.1",
    "waitress >= 2.1.2",
]
license = {text = "BSD"}
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/tschaefer/beets-store"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
