[project]
name = "beets-store"
version = "1.0.0"
description = "A plugin for the music geek's media organizer Beets"
readme = "README.md"
authors = [
    {name = "Tobias Schäfer", email = "beets-store@blackox.org"},
]
dependencies = [
    "Flask >= 3.0.0",
    "flask-socketio >= 5.6.1",
    "beets >= 2.0.0",
    "redis >= 4.1.4",
    "requests >= 2.25.0",
    "rq >= 1.10.1",
    "gevent >= 24.2.1",
    "gevent-websocket >= 0.10.1",
]
license = {text = "BSD"}
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/tschaefer/beets-store"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
